<?xml version="1.0" encoding="utf-8"?>
<ScrollView  
    xmlns:android="http://schemas.android.com/apk/res/android"  
    xmlns:holo="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollView01"  
    android:layout_width="fill_parent"  
    android:layout_height="wrap_content"  
    android:scrollbars="vertical">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"        
	    android:layout_width="fill_parent"  
	    android:orientation="vertical"  
	    android:layout_height="fill_parent"  
		android:descendantFocusability="beforeDescendants"
		android:focusableInTouchMode="true" 
	    tools:context=".AddActivityRail" >
	    
		<TextView  
		    android:id="@+id/AddActivityStartTime"  
		    android:layout_width="wrap_content"  
		    android:layout_height="wrap_content"  
		    android:text="@string/add_activity_start_time"   
		    android:textSize="10pt" 
	        android:layout_marginTop="10dp"
	        android:layout_marginRight="15dp"
	        android:layout_marginLeft="15dp"/>  
	    
	    <EditText 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/add_activity_start_time" 
	    	android:hint="@string/add_activity_start_hint" 
			android:focusableInTouchMode="false" 
	        android:layout_alignParentRight="true"
	        android:inputType="number"
	        android:paddingTop="10dp"
	        android:layout_margin="15dp"/>  
	    
		<TextView  
		    android:id="@+id/AddActivityEndTime"  
		    android:layout_width="wrap_content"  
		    android:layout_height="wrap_content"  
		    android:text="@string/add_activity_end_time"   
		    android:textSize="10pt" 
	        android:layout_marginTop="10dp"
	        android:layout_marginRight="15dp"
	        android:layout_marginLeft="15dp"/>  
	    
	    <EditText 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/add_activity_end_time" 
	    	android:hint="@string/add_activity_end_hint" 
			android:focusableInTouchMode="false" 
	        android:layout_alignParentRight="true"
	        android:inputType="number"
	        android:paddingTop="10dp"
	        android:layout_margin="15dp"/>  
	    
		
		<TextView  
		    android:id="@+id/additional_notes_title"  
		    android:layout_width="wrap_content"  
		    android:layout_height="wrap_content"  
		    android:text="@string/misc_activity_details"  
		    android:textSize="10pt" 
	        android:layout_marginTop="10dp"
	        android:layout_marginRight="15dp"
	        android:layout_marginLeft="15dp"/> 
	        
		
		<EditText  
		    android:id="@+id/additional_notes"  
		    android:layout_height="wrap_content"  
		    android:hint="@string/additional_notes_add_misc_hint"  
		    android:inputType="textMultiLine"  
		    android:lines="5"  
		    android:layout_width="fill_parent"
			android:layout_alignParentLeft="true"
			android:layout_alignParentTop="true"
	        android:paddingTop="10dp"
	        android:layout_margin="15dp"/>  

	</LinearLayout>
 
</ScrollView>  